--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Momentum App</title>
   </head>
   <body>
+    <h2 id="clock">00:00:00</h2>
     <form class="hidden" id="login-form">
       <input
         required
@@ -16,9 +17,16 @@
       />
       <button>Log In</button>
     </form>
-    <h2 id="clock">00:00:00</h2>
     <h1 id="greeting" class="hidden"></h1>
+    <form id="todo-form">
+      <input type="text" placeholder="Write a To Do and Press Enter" />
+    </form>
+    <ul id="todo-list"></ul>
     <div id="quote">
+      <span></span>
+      <span></span>
+    </div>
+    <div id="weather">
       <span></span>
       <span></span>
     </div>
@@ -26,5 +34,7 @@
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
+    <script src="js/todo.js"></script>
+    <script src="js/weather.js"></script>
   </body>
 </html>
